// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, iOS 390 1`] = `
{
  "lines": 444,
  "sha256": "129d494893caa28c7ee3e1def1d2db13c229241f18eb8a4ce35eb7346d390731",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 390 1`] = `
{
  "lines": 444,
  "sha256": "129d494893caa28c7ee3e1def1d2db13c229241f18eb8a4ce35eb7346d390731",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 768 1`] = `
{
  "lines": 444,
  "sha256": "129d494893caa28c7ee3e1def1d2db13c229241f18eb8a4ce35eb7346d390731",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault?subId=S1 (the detail early return), iOS 390 1`] = `
{
  "lines": 704,
  "sha256": "a9a0c68eb7a214d7cf88a8360789e0f2290037808de2841256784f58ed822774",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs add sheet (add-sub), iOS 390 1`] = `
{
  "lines": 817,
  "sha256": "c82a5e7a3703f80d58aac8a81188e80771335fab51e28324d4cc9a2ca372ab23",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, iOS 390 1`] = `
{
  "lines": 817,
  "sha256": "27b32ffe88ce46b515877a7d9d368863bc51d5568409d3f0d90e241d209812e3",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 390 1`] = `
{
  "lines": 817,
  "sha256": "27b32ffe88ce46b515877a7d9d368863bc51d5568409d3f0d90e241d209812e3",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 768 1`] = `
{
  "lines": 817,
  "sha256": "27b32ffe88ce46b515877a7d9d368863bc51d5568409d3f0d90e241d209812e3",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs detail open (sub-S1), iOS 390 1`] = `
{
  "lines": 994,
  "sha256": "cd1c451ab1c15a0273d316901d02a4bdf2e78ac5850de3284fbb557ee0297177",
}
`;
